# EmberVLM

./: .gitattributes  .gitignore  BENCHMARKING_QUICKSTART.md  GIT_PUSH_COMMANDS.txt  LICENSE  README.md  STAGE3_FIX_SUMMARY.txt  VLMEVAL_SETUP.md  __init__.py  pyproject.toml  quick_start.py  requirements.txt  setup.py  setup_vlmeval.py  visualize_training.py
Multi-Robot-Selection/: multi_robot_selection_dataset.csv
configs/: base.yaml  datasets.yaml  deployment.yaml  full_training.yaml  memory_safe_training.yaml  training.yaml  training_stages.yaml
deployment/: __init__.py  pi_inference.py
docs/: README.md
docs/architecture/: MODEL_ARCHITECTURE.md
docs/datasets/: DATASET_OVERVIEW.md  VISUALIZATION_SUMMARY.md
docs/training/: STAGE1_GUIDE.md  STAGE2_GUIDE.md  STAGE3_GUIDE.md  STAGE4_GUIDE.md
download-scripts/: download_incidents_images.py
embervlm/: __init__.py
embervlm/data/: __init__.py  augmentations.py  incident_loader.py  loaders.py  robot_loader.py
embervlm/deployment/: __init__.py  api_server.py  pi_runtime.py
embervlm/distillation/: __init__.py  generator.py  losses.py  teacher.py
embervlm/evaluation/: __init__.py  metrics.py  vlm_benchmarks.py  vlmevalkit_adapter.py
embervlm/models/: __init__.py  embervlm.py  fusion_module.py  language_model.py  reasoning_heads.py  vision_encoder.py
embervlm/monitoring/: __init__.py  advanced_visualizations.py  attention_viz.py  carbon_tracker.py  flops_counter.py  stage_visualizations.py  visualization.py  wandb_logger.py
embervlm/quantization/: __init__.py  quantize.py
embervlm/training/: __init__.py  behavioral_analyzer.py  contrastive_metrics.py  (+12 more)
evaluation/: __init__.py  robot_eval.py
incidents-dataset/: eccv_train.json  eccv_val.json
models/: __init__.py  embervlm.py  fusion_module.py  language_model.py  vision_encoder.py
quantization/: __init__.py  gguf_conversion.py  pi_optimize.py
robot-selection-dataset/: multi-robot-selection.json  multi_robot_selection_dataset.json  single_robot_selection.json
scripts/: __init__.py  check_embedding_size.py  deploy.py  evaluate.py  evaluate_vlmevalkit.py  export_for_pi.py  generate_paper_figures.py  generate_reasoning_data.py  set_nccl_env.sh  train_all.py  train_all_stages.py
training/: __init__.py  distillation.py  stage1_align.py  stage2_instruct.py  stage3_reasoning.py  trainer.py
utils/: __init__.py  carbon_tracker.py  hf_uploader.py  wandb_logger.py
visualization/: __init__.py  attention_heatmaps.py
(+2 files in other folders)
