[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embervlm"
version = "0.1.0"
description = "Ultra-efficient Multimodal Vision-Language Model for Robot Fleet Reasoning"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "EmberVLM Team"}
]
keywords = [
    "vision-language",
    "multimodal",
    "robot-fleet",
    "edge-ai",
    "pytorch",
    "transformers"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
    "datasets>=2.14.0",
    "huggingface_hub>=0.19.0",
    "accelerate>=0.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "pillow>=9.5.0",
]

[project.optional-dependencies]
training = [
    "wandb>=0.16.0",
    "codecarbon>=2.3.0",
    "bitsandbytes>=0.41.0",
    "nltk>=3.8.0",
    "rouge-score>=0.1.2",
]
visualization = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
deployment = [
    "llama-cpp-python>=0.2.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]
all = [
    "embervlm[training,visualization,deployment,dev]",
]

[project.scripts]
embervlm-train = "embervlm.scripts.train_all_stages:main"
embervlm-inference = "embervlm.deployment.pi_inference:main"

[project.urls]
Homepage = "https://github.com/embervlm/EmberVLM"
Documentation = "https://github.com/embervlm/EmberVLM#readme"
Repository = "https://github.com/embervlm/EmberVLM"

[tool.setuptools.packages.find]
where = ["."]
include = ["embervlm*", "models*", "data*", "training*", "utils*", "visualization*", "quantization*", "evaluation*", "deployment*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

